[gd_scene load_steps=16 format=3 uid="uid://dpkn0u6ocbxrj"]

[ext_resource type="Script" uid="uid://dhq837k46p1tr" path="res://panels/UIConstellationManager/UIConstellationManager.gd" id="1_sakur"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/styles/UIPanelBase.tres" id="1_w5m1w"]
[ext_resource type="PackedScene" uid="uid://dr0kfolsg46yu" path="res://panels/UIPanel/PanelMenuBar.tscn" id="3_nrpeh"]
[ext_resource type="Texture2D" uid="uid://bl7nw5rh753wr" path="res://assets/icons/Network.svg" id="4_tdbwv"]
[ext_resource type="Texture2D" uid="uid://c5afb1q842kn7" path="res://assets/icons/Power.svg" id="5_djvka"]
[ext_resource type="FontFile" uid="uid://crlak6jhg5jy2" path="res://assets/font/RubikMonoOne-Regular.ttf" id="5_nrpeh"]
[ext_resource type="Script" uid="uid://jwlrnaii5r5d" path="res://panels/UIConstellationManager/NodesTab.gd" id="6_tdpwf"]
[ext_resource type="PackedScene" uid="uid://bf3cbsyaotnnq" path="res://components/Table/Table.tscn" id="7_d2yxy"]
[ext_resource type="Script" uid="uid://bytxihk5rrmj7" path="res://panels/UIConstellationManager/SessionsTab.gd" id="8_d2yxy"]
[ext_resource type="Texture2D" uid="uid://ddo26yd8qpx5r" path="res://assets/icons/Refresh.svg" id="9_tkm7n"]
[ext_resource type="Script" uid="uid://cuhjehnbicvx1" path="res://panels/UIConstellationManager/ConfigTab.gd" id="11_d86vn"]
[ext_resource type="PackedScene" uid="uid://kjup3yrjifr5" path="res://components/SettingsManagerView/SettingsManagerView.tscn" id="12_dvlfc"]

[sub_resource type="ButtonGroup" id="ButtonGroup_nrpeh"]

[sub_resource type="FontVariation" id="FontVariation_djvka"]
base_font = ExtResource("5_nrpeh")
spacing_bottom = -5

[sub_resource type="LabelSettings" id="LabelSettings_tdbwv"]
font = SubResource("FontVariation_djvka")
font_size = 27

[node name="UIConstellationManager" type="PanelContainer" node_paths=PackedStringArray("status_label", "power_button", "nodes_tab", "session_tab", "edit_controls", "menu_bar")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_w5m1w")
script = ExtResource("1_sakur")
status_label = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/StatusLabel")
power_button = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer3/PowerButton")
nodes_tab = NodePath("VBoxContainer/HBoxContainer/NodesTab")
session_tab = NodePath("VBoxContainer/HBoxContainer/SessionsTab")
edit_controls = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/EditControls")
menu_bar = NodePath("VBoxContainer/PanelMenuBar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelMenuBar" parent="VBoxContainer" instance=ExtResource("3_nrpeh")]
layout_mode = 2

[node name="PanelName" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="0"]
text = "Constellation Manager"
icon = ExtResource("4_tdbwv")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="NodesTabButton" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_nrpeh")
text = "Nodes"

[node name="SessionsTabButton" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_nrpeh")
text = "Sessions"

[node name="ConfigTabButton" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_nrpeh")
text = "Config"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="PowerButton" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("5_djvka")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
text = "OFFLINE"
label_settings = SubResource("LabelSettings_tdbwv")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NodesTab" type="PanelContainer" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("_table")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("6_tdpwf")
_table = NodePath("HBoxContainer/VBoxContainer/Table")

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer/NodesTab"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Table" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer" instance=ExtResource("7_d2yxy")]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Reload" type="Button" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("9_tkm7n")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"

[node name="SessionsTab" type="PanelContainer" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("_table", "leave_session_button", "join_session_button")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("8_d2yxy")
_table = NodePath("VBoxContainer/Table")
leave_session_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/LeaveSessionButton")
join_session_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer/JoinSessionButton")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/SessionsTab"]
layout_mode = 2

[node name="Table" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer" instance=ExtResource("7_d2yxy")]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CreateSessionButton" type="Button" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Create Session"

[node name="LeaveSessionButton" type="Button" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Leave Session"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="JoinSessionButton" type="Button" parent="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Join Session"

[node name="ConfigTab" type="PanelContainer" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("_settings_manager_view")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11_d86vn")
_settings_manager_view = NodePath("ScrollContainer/SettingsManagerView")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/ConfigTab"]
layout_mode = 2

[node name="SettingsManagerView" parent="VBoxContainer/HBoxContainer/ConfigTab/ScrollContainer" instance=ExtResource("12_dvlfc")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="toggled" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2/HBoxContainer/NodesTabButton" to="VBoxContainer/HBoxContainer/NodesTab" method="set_visible"]
[connection signal="toggled" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2/HBoxContainer/SessionsTabButton" to="VBoxContainer/HBoxContainer/SessionsTab" method="set_visible"]
[connection signal="toggled" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2/HBoxContainer/ConfigTabButton" to="VBoxContainer/HBoxContainer/ConfigTab" method="set_visible"]
[connection signal="toggled" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer3/PowerButton" to="." method="_on_power_button_toggled"]
[connection signal="selection_changed" from="VBoxContainer/HBoxContainer/NodesTab/HBoxContainer/VBoxContainer/Table" to="VBoxContainer/HBoxContainer/NodesTab" method="_on_table_selection_changed"]
[connection signal="selection_changed" from="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/Table" to="VBoxContainer/HBoxContainer/SessionsTab" method="_on_table_selection_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/CreateSessionButton" to="VBoxContainer/HBoxContainer/SessionsTab" method="_on_create_session_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/LeaveSessionButton" to="VBoxContainer/HBoxContainer/SessionsTab" method="_on_leave_session_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SessionsTab/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer/JoinSessionButton" to="VBoxContainer/HBoxContainer/SessionsTab" method="_on_join_session_button_pressed"]

[editable path="VBoxContainer/PanelMenuBar"]
